[EuiCode][EuiCodeBlock] Various cleanups and bug fixes (#5379)
* DRY out code used by both inline code & code blocks to utils

+ write unit tests
+ organize utils with comment blocks

* DRY out shared props between inline code & code blocks

+ fix external link
+ remove prop already listed in CommonProps

* Refactor EuiCode to not use EuiCodeBlockImpl

+ remove prismjs class and language-* class - they didn't seem to be doing anything :shrug:

+ remove language class - it also wasn't doing anything, and maybe belongs better as a data attribute

+ add unit tests for language and background props

* Refactor EuiCodeBlockImpl to EuiCodeBlock

+ removing any `inline` conditional logic

+ cleaning up props type/order

* Delete _code_block.test.tsx and move relevant tests to code_block.test.tsx

* Delete EuiCodeBlockImpl export and testenv

- The export shouldn't have been exported in the first place most likely, and hopefully wasn't being used by any consumers

- The testenv I'm less certain about but it looks like we used to `createPortal()` directly at one point and no longer do so/use EuiMaskOverlay, so it shouldn't be needed anymore

* Delete unnecessary html.d.ts

- By switching to render instead of html for snapshotting (tbh this seems easier to read in any case)

+ fix another instance in EuiDraggable that was bogarting this html.d.ts

* Remove unused prismjs and language classes

- As far as I can tell, the prismjs CSS isn't doing anything in FF or Chrome (selections still work fine), and the language class is not doing anything either

* Fix missing ...rest not spreading to fullscreen/virtualized elements

+ Update full screen unit test to snapshot to show aria-label/data-test-subj correctly cascading

* Fix broken fullscreen escape key

- the keydown was on the `<code>` element, but it needs to be on an element with `tabindex="0"` which is the `<pre>` element

* Fix fontSize="l" on Amsterdam theme

+ virtualiz

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -3,7 +3,6 @@
   display: block;
   position: relative;
   background: $euiCodeBlockBackgroundColor;
-  color: $euiCodeBlockColor;
 
   .euiCodeBlock__pre {
     @include euiScrollBar;
@@ -74,10 +73,11 @@
 
   .euiCodeBlock__code {
     @include euiCodeFont;
-    display: block;
     line-height: $euiLineHeight;
     font-weight: $euiCodeFontWeightRegular;
     font-size: inherit;
+    color: $euiCodeBlockColor;
+    display: block;
   }
 
   .euiCodeBlock__controls {
@@ -169,163 +169,9 @@
     }
   }
 
-
-  /*
-   * 1. Size the code against the text its embedded within.
-   */
-  &.euiCodeBlock--inline {
-    display: inline-block;
-    white-space: pre;
-    color: $euiTextColor;
-    font-size: 90%; /* 1 */
-    padding: 0 $euiSizeS;
-    background: $euiCodeBlockBackgroundColor;
-
-    .euiCodeBlock__pre {
-      padding: 0 $euiSizeXS;
-    }
-
-    .euiCodeBlock__code {
-      display: inline;
-      white-space: normal;
-    }
-  }
-
   &.euiCodeBlock--transparentBackground {
     background: transparent;
   }
 
-  .prismjs > *::selection {
-    // Only change the color if the variable IS a color
-    // or else no highlight color shows up at all
-    @if type-of($euiCodeBlockSelectedBackgroundColor) == color {
-      background-color: $euiCodeBlockSelectedBackgroundColor;
-    }
-  }
-
-  .token.punctuation:not(.interpolation-punctuation):not([class*='attr-']) {
-    opacity: .7;
-  }
-
-  .token.comment,
-  .token.prolog,
-  .token.doctype,
-  .token.cdata,
-  .token.coord,
-  .token.blockquote {
-    color: $euiCodeBlockCommentColor;
-    font-style: italic;
-  }
-
-  .token.selector {
-    color: $euiCodeBlockSelectorTagColor;
-  }
-
-  .token.string,
-  .token.interpolation,
-  .token.interpolation-punctuation,
-  .token.doc-comment .token.keyword,
-  .token.attr-value,
-  .token.url .token.content {
-    color: $euiCodeBlockStringColor;
-  }
-
-  .token.number,
-  .token.boolean,
-  .token.keyword.nil,
-  .token.regex,
-  .token.variable,
-  .token.unit,
-  .token.hexcode,
-  .token.attr-name,
-  .token.attr-equals {
-    color: $euiCodeBlockNumberColor;
-  }
-
-  .token.atrule .token.rule,
-  .token.keyword {
-    color: $euiCodeBlockKeywordColor;
-  }
-
-  .token.function {
-    color: $euiCodeBlockFunctionTitleColor;
-  }
-
-  .token.tag {
-    color: $euiCodeBlockTagColor;
-  }
-
-  .token.class-name {
-    color: $euiCodeBlockTypeColor;
-  }
-
-  .token.property {
-    color: $euiCodeBlockAttributeColor;
-  }
-
-  .token.console,
-  .token.list-punctuation,
-  .token.url-reference,
-  .token.url .token.url {
-    color: $euiCodeBlockSymbolColor;
-  }
-
-  .token.paramater {
-    color: $euiCodeBlockParamsColor;
-  }
-
-  .token.meta,
-  .token.important {
-    color: $euiCodeBlockMetaColor;
-  }
-
-  .token.title {
-    color: $euiCodeBlockTitleColor;
-  }
-
-  .token.section {
-    color: $euiCodeBlockSectionColor;
-  }
-
-  .token.prefix.inserted,
-  .token.prefix.deleted {
-    padding-left: $euiSizeXS;
-    margin-left: -$euiSizeXS;
-  }
-
-  .token.prefix.inserted {
-    box-shadow: -$euiSizeXS 0 $euiCodeBlockAdditionColor;
-    color: $euiCodeBlockAdditionColor;
-  }
-
-  .token.prefix.deleted {
-    box-shadow: -$euiSizeXS 0 $euiCodeBlockDeletionColor;
-    color: $euiCodeBlockDeletionColor;
-  }
-
-  .token.selector .token.class {
-    color: $euiCodeBlockSelectorClassColor;
-  }
-
-  .token.selector .token.id {
-    color: $euiCodeBlockSelectorIdColor;
-  }
-
-  .token.italic {
-    font-style: italic;
-  }
-
-  .token.important,
-  .token.bold {
-    font-weight: $euiCodeFontWeightBold;
-  }
-
-  .token.url-reference,
-  .token.url .token.url {
-    text-decoration: underline;
-  }
-
-  .token.entity {
-    cursor: help;
-  }
+  @include euiCodeSyntaxTokens;
 }
