--- a/src/themes/eui-amsterdam/overrides/_code.scss
+++ b/src/themes/eui-amsterdam/overrides/_code.scss
@@ -1,8 +1,9 @@
-.euiCodeBlock.euiCodeBlock--inline {
+.euiCode {
   border-radius: $euiBorderRadiusSmall;
+  font-weight: $euiCodeFontWeightBold;
   color: makeHighContrastColor($euiColorVis3, $euiCodeBlockBackgroundColor);
+}
 
-  .euiCodeBlock__code {
-    font-weight: $euiCodeFontWeightBold;
-  }
+.euiCodeBlock.euiCodeBlock--fontLarge {
+  font-size: $euiFontSizeM;
 }
