--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -5,7 +5,7 @@
 @import 'button_group';
 @import 'call_out';
 @import 'card';
-@import 'code_block';
+@import 'code';
 @import 'color_stops';
 @import 'combo_box';
 @import 'comment';
