[Docs] Last move of tokens, Colors, to single page (#5378)
* Move Sass vis tokens to `Color palettes` page
* Added `Color mode` specific page
* Added `Colors` token page
* Changed “Global values” to “Customizing” to focus on just adjusting values
* Added the more options to the GuideSectionTypes
* More emphasis on top level navs that match search
* Moving files out of Guidelines folder
* Converted contrast files to TSX
* Cleanup of Contrast files/layout and make work with EuiTheme
* [EuiToolTip] Force nested EuiHorizontalRule backgrounds to be more subdued (match that of the title border)

--- a/src-docs/src/components/guide_page/_guide_page.scss
+++ b/src-docs/src/components/guide_page/_guide_page.scss
@@ -63,8 +63,8 @@ $guideSideNavWidth: 240px;
   }
 }
 
-.guideSideNav__item--inSearch {
-  color: $euiColorDarkShade;
+.euiSideNavItem--trunk > .euiSideNavItemButton .guideSideNav__item--inSearch .euiMark {
+  color: $euiColorPrimary;
 }
 
 
