--- a/src/global_styling/variables/_tool_tip.scss
+++ b/src/global_styling/variables/_tool_tip.scss
@@ -1,4 +1,5 @@
 $euiTooltipBackgroundColor: tintOrShade($euiColorFullShade, 25%, 100%) !default;
+$euiTooltipBorderColor: tintOrShade($euiColorFullShade, 35%, 80%) !default;
 
 $euiTooltipAnimations: (
   top: euiToolTipTop,
