[EuiRange] Remove tick label scrollbars in Safari (#5427)
* overflow-y: hidden;

* CL

* Update src/components/form/range/_range_ticks.scss

Co-authored-by: Constance <constancecchen@users.noreply.github.com>

Co-authored-by: Constance <constancecchen@users.noreply.github.com>

--- a/src/components/form/range/_range_ticks.scss
+++ b/src/components/form/range/_range_ticks.scss
@@ -21,7 +21,8 @@
 }
 
 .euiRangeTick {
-  overflow-x: hidden;
+  overflow-x: hidden; // Overridden if labels overflow horizontally
+  overflow-y: hidden; // Should never scroll vertically
   text-overflow: ellipsis;
   font-size: $euiFontSizeXS;
   position: absolute;
