[EuiPagination] Added `first`/`last` buttons for compressed and allowing for indeterminate `pageCount` (#5362)
* [EuiPagination] Allowing `0` if `pageCount` is unknown
* [EuiPagination] Added `title`s to prev/next buttons
* [EuiIcon] Added `doubleArrowLeft`, `doubleArrowRight`,`arrowStart` and `arrowEnd` while also updating the other `arrow` icons to a thicker weight
* Added `first` and `last` buttons and refactored arrow button component
* Using negative index for `activePage` to indicate last page
* Render first/last if `compressed` and remove clicks from numbers
* Update examples and add one for `Indeterminate`
* Added `responsive` prop that renders the `compressed` display and is customizable
* Fixup a11y text by using simplified `Page # of #` syntax and reduced arrow button titles to `First, Previous, Next, Last`

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -1,6 +1,9 @@
 .euiPagination {
+  @include euiScrollBar;
   display: flex;
   align-items: center;
+  overflow-y: hidden;
+  overflow-x: auto;
 
   &__compressedText {
     // sass-lint:disable-block no-important
@@ -8,12 +11,15 @@
     align-items: center;
     line-height: 1 !important; // Override EuiText line-height
 
-    > *:first-child {
-      margin-right: $euiSizeXS;
-    }
+    > span {
+      margin-right: $euiSizeS;
+      margin-left: $euiSizeS;
+      font-weight: $euiFontWeightSemiBold;
 
-    > *:last-child {
-      margin-left: $euiSizeXS;
+      // sass-lint:disable-block nesting-depth
+      &:first-of-type {
+        color: $euiColorPrimaryText;
+      }
     }
   }
 }
