[EuiSuperDatePicker] Fixes for width and auto refresh (#5383)
* [EuiSuperDatePicker] Sizing updates
  - Adds `width` and `isQuickSelectOnly` props
  - Adjusts styles accordingly with sensible min-widths
  - Updated Save Queries example to show auto width and reducing to quick select only when KQL is in focus
  - Fixed `dataTestSubj` -> `data-test-subj`
  - Removed ‘Show dates’ in favor of automatically expanding pretty format and opening start date popover
* [EuiIcon] Added `timeRefresh`
* [EuiFormControlLayout] Fix background of button prepend/appends with `readOnly`
  - And fixed border-radius for EuiSuperDatePicker with `append`
* [EuiRefreshInterval] Using a toggle for start/stop
  - disabling inputs if paused
  - invalidating value if 0 or less
  - always rendering (moved render logic to quick select)
  - render in one row
* [New] EuiAutoRefresh & EuiAutoRefreshButton components
* [EuiSuperDatePicker] Simplify `isAutoRefreshOnly` to render the new EuiAutoRefresh component
  - Increases the default `refreshInterval` to `1000` / `1s`
* [EuiSuperDatePicker] Added EuiAutoRefreshButton as an `append` when turned on
  - [prettyInterval()] added `shortHand` parameter
* Fix color of prepend/append backgrounds in dark mode
* Moved round switch to popover footer to prepare for #4537
* [EuiSuperDatePicker] Now supports `compressed`
* [EuiSuperUpdateButton] Add support for `iconOnly` version and move `responsive` to customizable prop
  - Support in EuiSuperDatePicker with `showUpdateButton = ‘iconOnly’`
  - Fix min-widths on smaller screens
* [EuiSuperUpdateButton] Splitting up prop types between internal and configurable

--- a/src/components/date_picker/super_date_picker/_super_date_picker.scss
+++ b/src/components/date_picker/super_date_picker/_super_date_picker.scss
@@ -1,16 +1,37 @@
+// sass-lint:disable-block function-name-format
+
 .euiSuperDatePicker__flexWrapper {
   // Need to offset 8px because of negative margins added by small size gutter
   max-width: calc(100% + #{$euiSizeS});
+  // Set a sensible min-width for when width is auto
+  min-width: MIN(($euiFormMaxWidth / 2) + $euiSuperDatePickerButtonWidth + $euiSizeS, 100%);
   width: $euiSuperDatePickerWidth + $euiSuperDatePickerButtonWidth + $euiSizeS;
+
+  &.euiSuperDatePicker__flexWrapper--fullWidth {
+    // Need to offset 8px because of negative margins added by small size gutter
+    width: calc(100% + #{$euiSizeS});
+  }
+
+  &.euiSuperDatePicker__flexWrapper--isQuickSelectOnly {
+    min-width: 0;
+  }
+
+  &.euiSuperDatePicker__flexWrapper--autoWidth {
+    display: inline-flex;
+    width: auto;
+  }
 }
 
 .euiSuperDatePicker__flexWrapper--isAutoRefreshOnly {
+  min-width: MIN($euiFormMaxWidth / 2, 100%);
   width: $euiFormMaxWidth;
 }
 
 .euiSuperDatePicker__flexWrapper--noUpdateButton {
+  min-width: MIN($euiFormMaxWidth / 2, 100%);
   width: $euiSuperDatePickerWidth;
 }
+
 
 .euiSuperDatePicker {
   // sass-lint:disable-block no-important
@@ -26,6 +47,15 @@
       width: auto;
       border-radius: 0 $euiFormControlBorderRadius $euiFormControlBorderRadius 0;
     }
+
+    &:not(:last-child) > .euiDatePickerRange {
+      &,
+      .euiDatePopoverButton--end,
+      .euiSuperDatePicker__prettyFormat {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+    }
   }
 }
 
@@ -33,6 +63,10 @@
   // Fixes margin around delimiter
   // Only needed on first popover since basic .euiFormControlLayout takes care of the last one
   margin-right: -$euiSizeM;
+
+  .euiFormControlLayout--compressed & {
+    margin-right: -$euiSizeS;
+  }
 }
 
 .euiSuperDatePicker__prettyFormat {
@@ -44,36 +78,17 @@
   &:not(:disabled):hover,
   &:focus {
     text-decoration: none;
-
-    .euiSuperDatePicker__prettyFormatLink {
-      text-decoration: underline;
-    }
   }
 
   &:disabled {
     background-color: $euiFormBackgroundDisabledColor;
     color: $euiColorDarkShade;
     cursor: not-allowed;
-
-    .euiSuperDatePicker__prettyFormatLink {
-      display: none;
-    }
   }
-}
-
-.euiSuperDatePicker__prettyFormatLink {
-  color: $euiLinkColor;
-  padding-left: $euiSizeXS; // Adds some separation between date text and link
-  flex-shrink: 0;
 }
 
 @include euiBreakpoint('xs', 's') {
   .euiSuperDatePicker__flexWrapper {
     width: calc(100% + #{$euiSizeS});
-  }
-
-  .euiSuperDatePicker__prettyFormatLink {
-    flex-shrink: 1;
-    min-width: 3em; // Ensures at least "Show" is always visible
   }
 }
