--- a/src/components/date_picker/super_date_picker/date_popover/_date_popover_button.scss
+++ b/src/components/date_picker/super_date_picker/date_popover/_date_popover_button.scss
@@ -2,6 +2,11 @@
   @include euiSuperDatePickerText;
   background-size: 100%; // For the bottom "border" via background-image
 
+  &--compressed {
+    line-height: $euiFormControlLayoutGroupInputCompressedHeight;
+    height: $euiFormControlLayoutGroupInputCompressedHeight;
+  }
+
   &:focus,
   &-isSelected {
     background-image: euiFormControlGradient();
