[EuiLoadingSpinner] Change `s`-size to match EuiIcon (#5440)
* Fix xs-sized isLoading EuiButtonEmpty with icons

- widths would previously jump around due to the loading spinner being smaller than the icon

* Add changelog entry

* Revert "Fix xs-sized isLoading EuiButtonEmpty with icons"

This reverts commit 881277ff107e956903fb5e0a30dcc1b460509418.

* Increase the size of `s` EuiLoadingSpinner to match EuiIcon

* Fix changelog location after release

* Update `EuiFormControlLayoutIcons` to use a small loading spinner when compressed

* fix snapshot

--- a/src/components/loading/_loading_spinner.scss
+++ b/src/components/loading/_loading_spinner.scss
@@ -14,8 +14,8 @@
 }
 
 .euiLoadingSpinner--small {
-  width: $euiSizeS;
-  height: $euiSizeS;
+  width: $euiSizeM;
+  height: $euiSizeM;
   border-width: 1px;
 }
 
