[EuiDataGrid] Fix cell popovers overlapping with modals and flyouts (#5461)
* Lower the hard-coded z-index of cell popovers

* Add changelog entry

* [PR feedback] Z-index comment

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -130,6 +130,7 @@
   // sass-lint:disable-block no-important
   max-width: 400px !important;
   max-height: 400px !important;
+  z-index: $euiZDataGridCellPopover !important;
 }
 
 .euiDataGridRowCell__expand {
