--- a/src/components/datagrid/_variables.scss
+++ b/src/components/datagrid/_variables.scss
@@ -1,5 +1,6 @@
 $euiZDataGrid: $euiZHeader - 1;
 $euiZHeaderBelowDataGrid: $euiZHeader - 2;
+$euiZDataGridCellPopover: $euiZHeader; // Same z-index as EuiFlyout mask overlays - cell popovers should be under both modal and flyout overlays
 
 $euiDataGridColumnResizerWidth: 3px; // Odd number because it straddles a border
 $euiDataGridPopoverMaxHeight: $euiSize * 25;
